Agentforce/force-app/main/default/objects/NPS__c/NPS__c.object-meta.xml
<CustomObject>
    <description>AD-190 - custom object to capture NPS</description>
    <label>NPS</label>
    <nameField>
        <displayFormat>NPS-{000000}</displayFormat>
        <label>NPS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>