Agentforce/force-app/main/default/objects/NPS__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-209 - Add Account lookup to NPS object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPS</relationshipLabel>
    <relationshipName>NPS</relationshipName>
    <type>Lookup</type>
</CustomField>