Agentforce/force-app/main/default/objects/NPS__c/fields/Account_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Unit__c</fullName>
    <formula>Text(Account__r.Owner.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Business Unit</label>
    <type>Text</type>
</CustomField>