Agentforce/force-app/main/default/objects/NPS__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Account__r.Owner.Full_Name__c</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>