Agentforce/force-app/main/default/objects/NPS__c/fields/Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduled__c</fullName>
    <description>AD-426 - date field to capture when the NPS appointment has been scheduled</description>
    <label>Appointment Scheduled</label>
    <type>Date</type>
</CustomField>