Agentforce/force-app/main/default/objects/NPS__c/fields/Arranged_Date__c.field-meta.xml
<CustomField>
    <fullName>Arranged_Date__c</fullName>
    <label>Arranged Date</label>
    <type>Date</type>
</CustomField>