Agentforce/force-app/main/default/objects/NPS__c/fields/Average_CEV_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_CEV_Score__c</fullName>
    <description>AD-211 - Calculate the average CEV score</description>
    <formula>Total_CEV_Score__c / Number_of_CEVs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average CEV Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>