Agentforce/force-app/main/default/objects/NPS__c/fields/Average_Response_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Response_Score__c</fullName>
    <description>AD-180 - Store the average score of the NPS Responses against this NPS</description>
    <formula>Total_NPS_Score__c / Number_of_Scored_NPS_Responses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Response Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>