Agentforce/force-app/main/default/objects/NPS__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>