Agentforce/force-app/main/default/objects/NPS__c/fields/CEV_Not_Recorded_Reason__c.field-meta.xml
<CustomField>
    <fullName>CEV_Not_Recorded_Reason__c</fullName>
    <label>CEV Not Recorded Reason</label>
    <type>TextArea</type>
</CustomField>