Agentforce/force-app/main/default/objects/NPS__c/fields/Client_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Email__c</fullName>
    <formula>NPS_Contact__r.Email</formula>
    <label>Client Contact Email</label>
    <type>Text</type>
</CustomField>