Agentforce/force-app/main/default/objects/NPS__c/fields/Client_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Number__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contact Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>