Agentforce/force-app/main/default/objects/NPS__c/fields/Client_Visiting_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Visiting_Name__c</fullName>
    <formula>Visiting_Contact__r.FirstName + &apos; &apos; +  Visiting_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Visiting Name</label>
    <type>Text</type>
</CustomField>