Agentforce/force-app/main/default/objects/NPS__c/fields/Contractual_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Delivery__c</fullName>
    <label>Contractual Delivery?</label>
    <type>TextArea</type>
</CustomField>