Agentforce/force-app/main/default/objects/NPS__c/fields/CreatedByUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreatedByUser</label>
    <type>Checkbox</type>
</CustomField>