Agentforce/force-app/main/default/objects/NPS__c/fields/Dealing_with_serious_issues__c.field-meta.xml
<CustomField>
    <fullName>Dealing_with_serious_issues__c</fullName>
    <label>Dealing with serious issues</label>
    <type>TextArea</type>
</CustomField>