Agentforce/force-app/main/default/objects/NPS__c/fields/Do_our_staff_demonstrate_company_values__c.field-meta.xml
<CustomField>
    <fullName>Do_our_staff_demonstrate_company_values__c</fullName>
    <label>Do our staff show good work ethic?</label>
    <type>TextArea</type>
</CustomField>