Agentforce/force-app/main/default/objects/NPS__c/fields/Do_we_look_for_future_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Do_we_look_for_future_opportunities__c</fullName>
    <label>Do we look for future opportunities?</label>
    <type>TextArea</type>
</CustomField>