Agentforce/force-app/main/default/objects/NPS__c/fields/Do_we_provide_accurate_information__c.field-meta.xml
<CustomField>
    <fullName>Do_we_provide_accurate_information__c</fullName>
    <label>Do we provide accurate information?</label>
    <type>TextArea</type>
</CustomField>