Agentforce/force-app/main/default/objects/NPS__c/fields/Do_we_support_your_business_needs__c.field-meta.xml
<CustomField>
    <fullName>Do_we_support_your_business_needs__c</fullName>
    <label>Do we support your business needs?</label>
    <type>TextArea</type>
</CustomField>