Agentforce/force-app/main/default/objects/NPS__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>AD-207 - Store the date in which this NPS is due to be conducted</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>