Agentforce/force-app/main/default/objects/NPS__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <formula>&apos;text&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event  Name</label>
    <type>Text</type>
</CustomField>