Agentforce/force-app/main/default/objects/NPS__c/fields/Generate_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Generate_Action_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Action Plan</label>
    <type>Checkbox</type>
</CustomField>