Agentforce/force-app/main/default/objects/NPS__c/fields/How_do_we_compare_to_our_competitors__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_compare_to_our_competitors__c</fullName>
    <label>How do we compare to our competitors?</label>
    <type>TextArea</type>
</CustomField>