Agentforce/force-app/main/default/objects/NPS__c/fields/How_innovative_and_creative_are_we__c.field-meta.xml
<CustomField>
    <fullName>How_innovative_and_creative_are_we__c</fullName>
    <label>How innovative and creative are we?</label>
    <type>TextArea</type>
</CustomField>