Agentforce/force-app/main/default/objects/NPS__c/fields/How_open_honest_is_our_relationship__c.field-meta.xml
<CustomField>
    <fullName>How_open_honest_is_our_relationship__c</fullName>
    <label>How open &amp; honest is our relationship?</label>
    <type>TextArea</type>
</CustomField>