Agentforce/force-app/main/default/objects/NPS__c/fields/How_readily_available_are_we_to_meet_you__c.field-meta.xml
<CustomField>
    <fullName>How_readily_available_are_we_to_meet_you__c</fullName>
    <label>How readily available are we to meet you</label>
    <type>TextArea</type>
</CustomField>