Agentforce/force-app/main/default/objects/NPS__c/fields/How_well_do_we_represent_value_for_money__c.field-meta.xml
<CustomField>
    <fullName>How_well_do_we_represent_value_for_money__c</fullName>
    <label>How well do we represent value for money</label>
    <type>TextArea</type>
</CustomField>