Agentforce/force-app/main/default/objects/NPS__c/fields/How_well_do_you_rate_our_website__c.field-meta.xml
<CustomField>
    <fullName>How_well_do_you_rate_our_website__c</fullName>
    <label>How well do you rate our website?</label>
    <type>TextArea</type>
</CustomField>