Agentforce/force-app/main/default/objects/NPS__c/fields/Is_NPS_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>Is_NPS_Surveyor__c</fullName>
    <description>Formula field returns TRUE when NPS Surveyor is the currently logged in user</description>
    <formula>$User.Id = NPS_Surveyor__c</formula>
    <label>Is NPS Surveyor</label>
    <type>Checkbox</type>
</CustomField>