Agentforce/force-app/main/default/objects/NPS__c/fields/Legacy_OCS_NPS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_NPS_ID__c</fullName>
    <label>Legacy OCS NPS ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>