Agentforce/force-app/main/default/objects/NPS__c/fields/MD__c.field-meta.xml
<CustomField>
    <fullName>MD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the MD for this NPS</description>
    <label>MD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS1</relationshipName>
    <type>Lookup</type>
</CustomField>