Agentforce/force-app/main/default/objects/NPS__c/fields/MD_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>MD_Business_Unit__c</fullName>
    <description>Business Unit of NPS MD</description>
    <formula>TEXT(MD__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Business Unit</label>
    <type>Text</type>
</CustomField>