Agentforce/force-app/main/default/objects/NPS__c/fields/MD_Email__c.field-meta.xml
<CustomField>
    <fullName>MD_Email__c</fullName>
    <formula>MD__r.Email</formula>
    <label>MD Email</label>
    <type>Text</type>
</CustomField>