Agentforce/force-app/main/default/objects/NPS__c/fields/MD_Name__c.field-meta.xml
<CustomField>
    <fullName>MD_Name__c</fullName>
    <formula>MD__r.Full_Name__c</formula>
    <label>MD Name</label>
    <type>Text</type>
</CustomField>