Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>NPS_Action_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>NPS</relationshipLabel>
    <relationshipName>NPS</relationshipName>
    <type>Lookup</type>
</CustomField>