Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Action_Plan_Created__c.field-meta.xml
<CustomField>
    <fullName>NPS_Action_Plan_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPS Action Plan Created</label>
    <type>Checkbox</type>
</CustomField>