Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Contact__c.field-meta.xml
<CustomField>
    <fullName>NPS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-181 - Stores the Contact that this NPS record has been generated for</description>
    <label>NPS Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPS (NPS Contact)</relationshipLabel>
    <relationshipName>NPS2</relationshipName>
    <type>Lookup</type>
</CustomField>