Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NPS_Owner_Email__c</fullName>
    <description>US-362 - email address to capture the email of the NPS Owner</description>
    <label>NPS Owner Email</label>
    <type>Email</type>
</CustomField>