Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>NPS_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS2</relationshipName>
    <type>Lookup</type>
</CustomField>