Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Surveyor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>User.NPS_Surveyor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>NPS Surveyor</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS3</relationshipName>
    <type>Lookup</type>
</CustomField>