Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Surveyor_Email__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor_Email__c</fullName>
    <description>AD-360 - email to capture the email for the NPS Surveyor</description>
    <label>NPS Surveyor Email</label>
    <type>Email</type>
</CustomField>