Agentforce/force-app/main/default/objects/NPS__c/fields/NPS_Surveyor_Name__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor_Name__c</fullName>
    <formula>NPS_Surveyor__r.Full_Name__c</formula>
    <label>NPS Surveyor Name</label>
    <type>Text</type>
</CustomField>