Agentforce/force-app/main/default/objects/NPS__c/fields/NPSCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>NPSCaseSafeID__c</fullName>
    <description>NPS CaseSafeID</description>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPSCaseSafeID</label>
    <type>Text</type>
</CustomField>