Agentforce/force-app/main/default/objects/NPS__c/fields/Number_of_CEVs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_CEVs__c</fullName>
    <description>AD-211 - Count the Total Number of CEVs against the NPS</description>
    <label>Number of CEVs</label>
    <summaryForeignKey>CEV__c.NPS__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>