Agentforce/force-app/main/default/objects/NPS__c/fields/Number_of_NPS_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_NPS_Responses__c</fullName>
    <description>AD-180 - Track the total number of responses</description>
    <label>Number of NPS Responses</label>
    <summaryForeignKey>NPS_Response__c.NPS__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>