Agentforce/force-app/main/default/objects/NPS__c/fields/Number_of_Scored_NPS_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scored_NPS_Responses__c</fullName>
    <inlineHelpText>The number of NPS Responses with a Score assigned.</inlineHelpText>
    <label>Number of Scored NPS Responses</label>
    <summaryFilterItems>
        <field>NPS_Response__c.Score__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>NPS_Response__c.NPS__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>