Agentforce/force-app/main/default/objects/NPS__c/fields/OD__c.field-meta.xml
<CustomField>
    <fullName>OD__c</fullName>
    <label>OD</label>
    <type>Email</type>
</CustomField>