Agentforce/force-app/main/default/objects/NPS__c/fields/Ops_Director__c.field-meta.xml
<CustomField>
    <fullName>Ops_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-180 - Stores the Ops Director for this NPS</description>
    <label>Ops Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS</relationshipName>
    <type>Lookup</type>
</CustomField>