Agentforce/force-app/main/default/objects/NPS__c/fields/Ops_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Ops_Responsibility__c</fullName>
    <label>Ops Responsibility</label>
    <type>Email</type>
</CustomField>