Agentforce/force-app/main/default/objects/NPS__c/fields/Recommend_Us_Score__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Us_Score__c</fullName>
    <label>Recommend Us Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>