Agentforce/force-app/main/default/objects/NPS__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <description>AD-426 - date to capture the date the NPS is reviewed</description>
    <label>Reviewed</label>
    <type>Date</type>
</CustomField>