Agentforce/force-app/main/default/objects/NPS__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <formula>&apos;text&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Location</label>
    <type>Text</type>
</CustomField>