Agentforce/force-app/main/default/objects/NPS__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AD-206 - Add NPS record statuses to track the NPS through it&apos;s lifecycle</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Required</fullName>
                <default>true</default>
                <label>Appointment Required</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Pending Results</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Awaiting Review</fullName>
                <isActive>false</isActive>
                <label>Awaiting Review</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>