Agentforce/force-app/main/default/objects/NPS__c/fields/Survey_Category__c.field-meta.xml
<CustomField>
    <fullName>Survey_Category__c</fullName>
    <label>Survey Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Category</valueSetName>
    </valueSet>
</CustomField>