Agentforce/force-app/main/default/objects/NPS__c/fields/Survey_Received__c.field-meta.xml
<CustomField>
    <fullName>Survey_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Received</label>
    <type>Checkbox</type>
</CustomField>