Agentforce/force-app/main/default/objects/NPS__c/fields/System_Conga_Merge_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>System_Conga_Merge_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked automatically by NPS After Create and Update flow when the Outbound Message is sent to Conga to generate the PDF. Used as criteria to show message to user on NPS Lightning Page.</description>
    <label>System: Conga Merge In Progress</label>
    <type>Checkbox</type>
</CustomField>