Agentforce/force-app/main/default/objects/NPS__c/fields/Total_CEV_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_CEV_Score__c</fullName>
    <description>AD-211 - Count the total CEV score for all CEVs captured under this NPS</description>
    <label>Total CEV Score</label>
    <summarizedField>CEV__c.Colleague_Recommendation_Score__c</summarizedField>
    <summaryForeignKey>CEV__c.NPS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>