Agentforce/force-app/main/default/objects/NPS__c/fields/Total_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_NPS_Score__c</fullName>
    <description>AD-180 - Summary of the score from all related NPS Responses</description>
    <label>Total NPS Score</label>
    <summarizedField>NPS_Response__c.Score__c</summarizedField>
    <summaryForeignKey>NPS_Response__c.NPS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>