Agentforce/force-app/main/default/objects/NPS__c/fields/Visit_Finish__c.field-meta.xml
<CustomField>
    <fullName>Visit_Finish__c</fullName>
    <description>AD-426 - date and time field to capture the visit finish of the NPS appointment</description>
    <label>Visit Finish</label>
    <type>DateTime</type>
</CustomField>