Agentforce/force-app/main/default/objects/NPS__c/fields/Visit_Start__c.field-meta.xml
<CustomField>
    <fullName>Visit_Start__c</fullName>
    <description>AD-426 - date and time field to capture the start of the NPS appointment</description>
    <label>Visit Start</label>
    <type>DateTime</type>
</CustomField>