Agentforce/force-app/main/default/objects/NPS__c/fields/Visiting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Comments__c</fullName>
    <label>Visiting Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>