Agentforce/force-app/main/default/objects/NPS__c/fields/Visiting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-180 - Stores the main point of contact for who is being visited in the business</description>
    <label>Visiting Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPS (Visiting Contact)</relationshipLabel>
    <relationshipName>NPS1</relationshipName>
    <type>Lookup</type>
</CustomField>