Agentforce/force-app/main/default/objects/NPS__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <label>Account</label>
</RecordType>