Agentforce/force-app/main/default/objects/NPS__c/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <description>AD-368 - Add record type for sending NPS Surveys to Contacts</description>
    <label>Contact</label>
</RecordType>