Agentforce/force-app/main/default/objects/NPS__c/validationRules/Reviewed_Date_must_be_populated_at_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Reviewed_Date_must_be_populated_at_Close</fullName>
    <active>true</active>
    <description>AD-426 - validation rule to ensure the Reviewed date is populated when the status is Closed</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    ISBLANK( Reviewed__c ),
    NOT($RecordType.DeveloperName = &quot;Contact&quot;)
)</errorConditionFormula>
    <errorDisplayField>Reviewed__c</errorDisplayField>
    <errorMessage>You must provide a Reviewed date</errorMessage>
</ValidationRule>