Agentforce/force-app/main/default/objects/NPS__c/listViews/All_Account_NPS_Surveys_To_Review.listView-meta.xml
<ListView>
    <fullName>All_Account_NPS_Surveys_To_Review</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Visit_Start__c</columns>
    <columns>Visit_Finish__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NPS__c.Account</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Review</value>
    </filters>
    <label>All Account NPS Surveys - To Review</label>
</ListView>