Agentforce/force-app/main/default/objects/NPS__c/listViews/All_Contact_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Contact_Surveys</fullName>
    <columns>NAME</columns>
    <columns>NPS_Contact__c</columns>
    <columns>Visiting_Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Survey_Category__c</columns>
    <columns>Average_Response_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NPS__c.Contact</value>
    </filters>
    <label>All Contact Surveys</label>
</ListView>